tests/invalid/incomplete_ternary.c
int main() {
    return 1 ? 2;
}
// ERROR: Line 2, Error 2001